--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="container text-center mt-5">
-
+ <h1> jogo da forca</h1>
     </div>
 
     <script src="script.js"></script>
