--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             <input type="text" id="entrada-letra" maxlength="1" class="form-control w-25 mx-auto"
             placeholder="Digite uma letra"> 
             <button id="botao-palpite" class="btn btn-primary mt-2">Dar palavra</button>
+        </div>
 
+        <div class="forca">
+            <div class="parte cabeca oculto"></div>
+            <div class="parte corpo oculto"></div>
+            <div class="parte braco-esquerdo oculto"></div>
+            <div class="parte braco-direito oculto"></div>
+            <div class="parte perna-esquerda oculto"></div>
+            <div class="parte perna-direita oculto"></div>
         </div>
         
     </div>
